--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;  
+@import url(https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900);
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
+    font-family: 'Inter';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
@@ -14,6 +16,22 @@ body {
   padding-right: 20px;
   background: #F8F7F6;
 }
+
+/* twa e za supabase auth screen */
+.c-bOcPnF-cmFMMs-color-primary {
+  background-color: #5B3410 !important;
+  font-family: 'Inter' !important;
+  font-weight: medium !important;
+}
+
+.c-bOcPnF {
+  border: none !important;
+}
+
+.c-bOcPnF-iwjZXY-color-default {
+  border: 1px solid lightgray !important;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
